package edu.fiuba.algo3.modelo;

abstract public class Arma {

    abstract public void herir(Reloj reloj);
}
