package edu.fiuba.algo3.modelo;

public interface EstadoOrdenArresto {

    public void terminarMision(Policia policia);
}
